# editor-cli

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: video-use
docs/superpowers/plans/: 2026-06-16-editor1-phase1-spine.md  2026-06-16-editor1-phase2-discovery.md
docs/superpowers/specs/: 2026-06-16-editor1-design.md
src/editor1/: __init__.py  cli.py  config.py
src/editor1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/editor1/acquire/: __init__.py  fetch.py  local.py
src/editor1/analysis/: __init__.py  gemini.py  transcribe.py
src/editor1/domain/: __init__.py  edl.py
src/editor1/pipeline/: orchestrator.py
src/editor1/render/: fcpxml.py  ffmpeg.py
src/editor_cli/: __init__.py  cli.py  config.py
src/editor_cli/acquire/: __init__.py  discover.py  fetch.py
src/editor_cli/analysis/: beat_snap.py  caption_emphasis.py  gemini.py  lyric_overlays.py  shot_select.py
src/editor_cli/domain/: __init__.py  edl.py  style_profile.py
src/editor_cli/pipeline/: __init__.py  orchestrator.py
src/editor_cli/render/: __init__.py  fcpxml.py  ffmpeg.py  hyperframes.py  overlays.py  title_style.py  titles.py
tests/: test_cli_smoke.py  test_config.py
tests/acquire/: test_acquire.py  test_discover.py  test_fetch.py
tests/analysis/: test_beat_snap.py  test_caption_emphasis.py  test_gemini.py  test_lyric_overlays.py  test_shot_select.py  test_transcribe.py
tests/domain/: test_edl.py  test_style_profile.py
tests/pipeline/: test_orchestrator.py
tests/render/: test_crossfade.py  test_fcpxml.py  test_ffmpeg.py  test_hyperframes_titles.py  test_motion_graphics.py  test_overlays.py  test_quality_aspect.py  test_title_style.py  test_titles.py
